<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChalmersOnTheGo</string>
    <string name="startMap">Start Map</string>
    <string name="title_activity_cmap">CMapActivity</string>
    <string name="action_layers">Layers</string>
    <string name="search_hint">Search lecture halls, buildings, grouprooms</string>
    <string name="drink_button">Drink!</string>
    
    <!-- distance and duration -->
    <string name="tv_distance_time_init">Tap two locations in the map</string>
    <string name="tv_distance_time">Distance</string>
    
    <!-- navigation -->
    <string name="start">Start</string>
    <string name="destination">Destination</string>

    <!-- Menu items -->
    <string name="action_direction">Get Directions</string>
    <string name="action_selectMode">Select Mode</string>
    <string name="exit_app">Exit</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="layers_lectureHalls">Show lecture halls</string>
    <string name="layers_computerRooms">Show computer rooms</string>
    <string name="layers_groupRooms">Show group rooms</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="action_my_location">My Location</string>
    <string name="action_stepcounter">Activate Stepcounter</string>
    <string name="action_calendarSynch">Synch with ICal</string>
    <string name="action_floors">Select visible floors</string>
    <string name="action_emptyMap">Empty map</string>
    <string name="action_calories">Calorie Drinking Progress</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>
    <string name="info_layers">Show layers on map</string>
    <string name="question_gps">"Do you want to enable either GPS or any other location service to find current location?</string>
    <string name="question_exit">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="hello_world">Hello world!</string>
    <string name="floor">Select Floor</string>
    <string name="deactivate_step">Deactivate stepcounter</string>
    <string name="myPosition">My Position</string>
    <string name="startStep">Start StepCounter First</string>
    <string name="stepDisable">Stepcounter disabled</string>
    <string name="actStep">Stepcounter Activated</string>

</resources>