<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
<!-- Mode button, will try to fix this in a better way
    <item
        android:id="@+id/action_modes"
        android:icon="@drawable/action_settings"
        android:orderInCategory="98"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_selectMode"/>
        -->
        
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/action_search"
        android:orderInCategory="99"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_layers"
        android:icon="@drawable/av_add_to_queue"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_layers"/>
    <item
        android:id="@+id/action_my_location"
        android:orderInCategory="101"
        android:icon="@drawable/action_my_location"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_my_location"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/exit_app"/>
    
    <item android:id="@+id/action_treadmill"
        android:orderInCategory="103"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_treadmill"/>

</menu>